rust/test/dt/type_constructor/many/many_without_args_test.stderr
error: no rules expected the token `>`
 --> ../../../rust/test/dt/type_constructor/many/many_without_args_test.rs:5:25
  |
5 |   types!( many Bad : <  > );
  |                         ^ no rules expected this token in macro call
